# rust_demo

./: Cargo.toml  README.md  output.txt
adder/src/: lib.rs
restaurant/src/: lib.rs
src/: closures.rs  collections.rs  comm_concepts.rs  control_flow.rs  enums.rs  error_handle.rs  fearless_concurrency.rs  generic_demo.rs  guess_game.rs  iterators.rs  main.rs  match_flow.rs  minigrep.rs  oop_demo.rs  ownership.rs  ref_and_borrow.rs  slice.rs  smart_pointers.rs  structure.rs  trait_demo.rs
src/oop_demo/: oop.rs
