
[package]
name = "rust_demo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "restaurant"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
restaurant = {version="0.1.0",path="./restaurant"}
adder = {version="0.1.0",path="./adder"}


[profile.release]
panic = 'abort'


